force-app/main/default/objects/Registration_Bank_Account__c/Registration_Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Registration Bank Account</label>
    <nameField>
        <displayFormat>RBA-{000000}</displayFormat>
        <label>Bank Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Bank Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>