force-app/main/default/objects/Registration_Bank_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payable</fullName>
            </value>
            <value>
                <fullName>Receivable</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Funding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>