force-app/main/default/objects/Registration_Bank_Account__c/fields/Active_Registration__c.field-meta.xml
<CustomField>
    <fullName>Active_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Initial Bank Accounts</relationshipLabel>
    <relationshipName>Registration_Bank_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>