force-app/main/default/objects/Registration_Bank_Account__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <label>Bank Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>