force-app/main/default/objects/Registration_Bank_Account__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <label>Financial Institution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>