force-app/main/default/objects/Registration_Bank_Account__c/fields/Inactive_Registration__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inactive Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Bank Accounts (Inactive)</relationshipLabel>
    <relationshipName>Registration_Bank_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>