force-app/main/default/objects/Registration_Bank_Account__c/fields/Is_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Is_IBAN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IBAN</label>
    <type>Checkbox</type>
</CustomField>