force-app/main/default/objects/Registration_Bank_Account__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Registration_Bank_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>