force-app/main/default/objects/Registration_Bank_Account__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>