force-app/main/default/objects/Registration_Bank_Account__c/fields/State_Province_LKP__c.field-meta.xml
<CustomField>
    <fullName>State_Province_LKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State/Province</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Country__c</field>
            <operation>equals</operation>
            <valueField>State_Detail__c.Country_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State_Detail__c</referenceTo>
    <relationshipLabel>Registration Bank Accounts</relationshipLabel>
    <relationshipName>Registration_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>