force-app/main/default/objects/Registration_Bank_Account__c/fields/State_Province_Text__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Text__c</fullName>
    <formula>CASESAFEID(State_Province_LKP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Province Text</label>
    <type>Text</type>
</CustomField>