force-app/main/default/objects/Registration_Bank_Account__c/recordTypes/Funding.recordType-meta.xml
<RecordType>
    <fullName>Funding</fullName>
    <active>true</active>
    <label>Funding</label>
</RecordType>