force-app/main/default/objects/Registration_Bank_Account__c/recordTypes/Funding_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Funding_Read_Only</fullName>
    <active>true</active>
    <label>Funding Read Only</label>
</RecordType>