force-app/main/default/objects/Registration_Bank_Account__c/recordTypes/Other_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Other_Read_Only</fullName>
    <active>true</active>
    <label>Other Read Only</label>
</RecordType>