force-app/main/default/objects/Registration_Bank_Account__c/validationRules/One_payable_account_per_registration.validationRule-meta.xml
<ValidationRule>
    <fullName>One_payable_account_per_registration</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Account_Type__c)) &amp;&amp; Active__c &amp;&amp; ISPICKVAL(Account_Type__c, &#39;Payable&#39;) &amp;&amp; Registration__r.Active_Payable_Account_Count__c &gt; 0</errorConditionFormula>
    <errorMessage>You can only have one active Payable Account per Registration.</errorMessage>
</ValidationRule>